[tool.poetry]
name = "bark"
version = "0.1.0"
description = ""
authors = ["Pymode-Dev <pymode000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
pytest = "^7.3.1"
pre-commit = "^3.3.2"
isort = "^5.12.0"
tinydb = "^4.8.0"
textual = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
